--- a/package.json
+++ b/package.json
@@ -1,30 +1,36 @@
 {
-  "name": "backend",
+  "name": "glean-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/server.ts",
-    "start": "node dist/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts",
+    "start": "node dist/index.js",
+    "test": "node test-server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Isaac Pooole",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
     "@atproto/api": "^0.16.9",
     "@atproto/common-web": "^0.4.3",
+    "@atproto/identity": "^0.4.9",
+    "@atproto/lex-cli": "^0.9.5",
     "@atproto/lexicon": "^0.5.1",
     "@atproto/repo": "^0.8.9",
+    "@atproto/sync": "^0.1.34",
     "@atproto/syntax": "^0.4.1",
     "@types/multer": "^2.0.0",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "kysely": "^0.28.7",
     "multer": "^2.0.2",
+    "sqlite3": "^5.1.7",
     "uuid": "^13.0.0"
   },
   "devDependencies": {
