--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@atproto/identity": "^0.4.9",
     "@atproto/lex-cli": "^0.9.5",
     "@atproto/lexicon": "^0.5.1",
+    "@atproto/oauth-client-node": "^0.3.8",
     "@atproto/repo": "^0.8.9",
     "@atproto/sync": "^0.1.34",
     "@atproto/syntax": "^0.4.1",
@@ -30,6 +31,7 @@
     "helmet": "^8.1.0",
     "kysely": "^0.28.7",
     "multer": "^2.0.2",
+    "pino": "^9.10.0",
     "sqlite3": "^5.1.7",
     "uuid": "^13.0.0"
   },
