--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "iron-session": "^8.0.4",
     "kysely": "^0.28.7",
     "multer": "^2.0.2",
     "pino": "^9.10.0",
