--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@atproto/repo": "^0.8.9",
     "@atproto/sync": "^0.1.34",
     "@atproto/syntax": "^0.4.1",
+    "@aws-sdk/client-s3": "^3.892.0",
+    "@aws-sdk/lib-storage": "^3.892.0",
     "@types/multer": "^2.0.0",
     "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
