Update .env.example with expanded environment configs and defaults

--- a/.env.example
+++ b/.env.example
@@ -3,18 +3,22 @@ PORT=3000
 NODE_ENV=development
 
 # CORS Configuration
-CORS_ORIGIN=http://localhost:3000
-
-# Database Configuration (for future use)
-# DATABASE_URL=postgresql://username:password@localhost:5432/gleam
+CORS_ORIGIN=*
 
 # JWT Secret (for production use)
 # JWT_SECRET=your-super-secret-jwt-key
 
-# File Upload Configuration
-MAX_FILE_SIZE=10485760  # 10MB in bytes
-MAX_PROFILE_IMAGE_SIZE=1048576  # 1MB in bytes
-
 # Rate Limiting (for future use)
 # RATE_LIMIT_WINDOW_MS=900000  # 15 minutes
 # RATE_LIMIT_MAX_REQUESTS=100
+
+# Environment Configuration
+HOST="localhost"       # Hostname for the server
+PUBLIC_URL=""          # Set when deployed publicly, e.g. "https://mysite.com". Informs OAuth client id.
+
+# Database Configuration (for future use)
+DB_PATH="./data"     # The SQLite database path. Leave as ":memory:" to use a temporary in-memory database.
+
+# Secrets
+# Must set this in production. May be generated with `openssl rand -base64 33`
+COOKIE_SECRET="dev-only-secret"
