--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "express-openapi-validator": "^5.6.0",
     "helmet": "^8.1.0",
     "iron-session": "^8.0.4",
     "kysely": "^0.28.7",
