Rework authentication with Atproto Agent and OAuth
Refactor user authentication by integrating `@atproto/api`'s Agent and
`iron-session` for session management. This replaces the previous custom
in-memory repository and token-based authentication.

Remove `openapi-typescript` dependency and the related type generation
workflow. All primary API endpoints are now prefixed with `/api`. The
`.env` file is now correctly ignored.

--- a/.env.example
+++ b/.env.example
@@ -21,4 +21,4 @@ DB_PATH="./data"     # The SQLite database path. Leave as ":memory:" to use a te
 
 # Secrets
 # Must set this in production. May be generated with `openssl rand -base64 33`
-COOKIE_SECRET="dev-only-secret"
+COOKIE_SECRET="01996f8b-fa17-7778-885e-fe4200081d33"
