--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "start": "node dist/index.js",
     "test": "node test-server.js",
-    "kill": "lsof -t -i :3000 | xargs kill -9"
+    "kill": "lsof -t -i :3000 | xargs kill -9",
+    "clean": "rm -rf dist && rm data/database.db",
+    "generate": "openapi-ts"
   },
   "keywords": [],
   "author": "Isaac Pooole",
